--- a/frontend/store-web/src/app/features/products/pages/product-list/product-list.html
+++ b/frontend/store-web/src/app/features/products/pages/product-list/product-list.html
@@ -1,2 +1,51 @@
-<h2>Productos</h2>
-<p>Bienvenido al módulo de productos 🎉</p>
+<div class="product-list-container">
+    <mat-card class="list-card">
+      <div class="header">
+        <h2>Productos</h2>
+        <button mat-raised-button color="primary" (click)="goToCreate()">Nuevo producto</button>
+      </div>
+  
+      <mat-divider></mat-divider>
+  
+      <div class="table-container">
+        <table mat-table [dataSource]="products" class="mat-elevation-z8">
+  
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>ID</th>
+            <td mat-cell *matCellDef="let p">{{ p.id }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Nombre</th>
+            <td mat-cell *matCellDef="let p">{{ p.name }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef>Precio</th>
+            <td mat-cell *matCellDef="let p">{{ p.price | currency }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="stock">
+            <th mat-header-cell *matHeaderCellDef>Stock</th>
+            <td mat-cell *matCellDef="let p">{{ p.stock }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
+            <td mat-cell *matCellDef="let p">
+              <button mat-icon-button color="accent" (click)="goToEdit(p.id!)" matTooltip="Editar">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="warn" (click)="deleteProduct(p.id!)" matTooltip="Eliminar">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </div>
+    </mat-card>
+  </div>
+  
