--- a/frontend/store-web/src/app/features/sales/pages/sale-list/sale-list.html
+++ b/frontend/store-web/src/app/features/sales/pages/sale-list/sale-list.html
@@ -1,25 +1,32 @@
-<div class="container">
-    <h2>Ventas</h2>
-    <button mat-raised-button color="primary" (click)="goToCreate()">Nueva venta</button>
+<div class="sales-container">
+    <div class="header">
+      <h2>Ventas</h2>
+      <button mat-raised-button color="primary" (click)="goToCreate()">
+        Nueva venta
+      </button>
+    </div>
   
-    <table mat-table [dataSource]="sales" class="mat-elevation-z8">
+    <table mat-table [dataSource]="sales" class="mat-elevation-z8 sales-table">
+      <!-- ID -->
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>ID</th>
         <td mat-cell *matCellDef="let s">{{ s.id }}</td>
       </ng-container>
   
+      <!-- Total -->
       <ng-container matColumnDef="total">
         <th mat-header-cell *matHeaderCellDef>Total</th>
-        <td mat-cell *matCellDef="let s">{{ s.total | currency }}</td>
+        <td mat-cell *matCellDef="let s">{{ s.total | currency:'USD':'symbol' }}</td>
       </ng-container>
   
+      <!-- Fecha -->
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef>Fecha</th>
-        <td mat-cell *matCellDef="let s">{{ s.date | date }}</td>
+        <td mat-cell *matCellDef="let s">{{ s.date | date:'short' }}</td>
       </ng-container>
   
-      <tr mat-header-row *matHeaderRowDef="['id','total','date']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['id','total','date']"></tr>
+      <tr mat-header-row *matHeaderRowDef="['id', 'total', 'date']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['id', 'total', 'date']"></tr>
     </table>
   </div>
   
